エラーページを日本語化

--- a/public/500.html
+++ b/public/500.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>We're sorry, but something went wrong (500)</title>
+  <title>何らかのシステムエラーが発生しました</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <style>
   .rails-default-error-page {
@@ -23,7 +23,7 @@
     border-right-color: #999;
     border-left-color: #999;
     border-bottom-color: #BBB;
-    border-top: #B00100 solid 4px;
+    border-top: #0095d9 solid 4px;    
     border-top-left-radius: 9px;
     border-top-right-radius: 9px;
     background-color: white;
@@ -33,7 +33,7 @@
 
   .rails-default-error-page h1 {
     font-size: 100%;
-    color: #730E15;
+    color: #0095d9;
     line-height: 1.5em;
   }
 
@@ -58,9 +58,9 @@
   <!-- This file lives in public/500.html -->
   <div class="dialog">
     <div>
-      <h1>We're sorry, but something went wrong.</h1>
+      <h1>何らかのシステムエラーが発生しました</h1>
     </div>
-    <p>If you are the application owner check the logs for more information.</p>
+    <p>utakatanka@gmail.com までご連絡ください。修正対応を行います</p>
   </div>
 </body>
 </html>
