文言を調整

--- a/public/404.html
+++ b/public/404.html
@@ -59,7 +59,7 @@
   <div class="dialog">
     <div>
       <h1>お探しのページは見つかりません</h1>
-      <p>削除された短歌またはユーザーのページの可能性があります</p>
+      <p>削除された短歌または歌人のページの可能性があります</p>
     </div>
     <p>ご不明点は utakatanka@gmail.com までご連絡ください</p>
   </div>
