--- a/public/500.html
+++ b/public/500.html
@@ -60,7 +60,7 @@
     <div>
       <h1>何らかのシステムエラーが発生しました</h1>
     </div>
-    <p><a href="https://twitter.com/fuyu77">Twitter公式アカウント</a>または utakatanka@gmail.com までご連絡ください。修正対応を行います。</p>
+    <p><a href="https://twitter.com/utakatanka">Twitter公式アカウント</a>または utakatanka@gmail.com までご連絡ください。修正対応を行います。</p>
   </div>
 </body>
 </html>
