--- a/public/500.html
+++ b/public/500.html
@@ -51,6 +51,17 @@
     color: #666;
     box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
   }
+
+  .rails-default-error-page a {
+    color: #007bff;
+    text-decoration: none;
+    background-color: transparent;
+  }
+
+  .rails-default-error-page a:hover {
+    color: #0056b3;
+    text-decoration: underline;
+  }
   </style>
 </head>
 
