--- a/public/500.html
+++ b/public/500.html
@@ -53,13 +53,13 @@
   }
 
   .rails-default-error-page a {
-    color: #007bff;
+    color: #0095d9;
     text-decoration: none;
     background-color: transparent;
   }
 
   .rails-default-error-page a:hover {
-    color: #0056b3;
+    color: #00a7f3;
     text-decoration: underline;
   }
   </style>
