--- a/public/404.html
+++ b/public/404.html
@@ -72,7 +72,7 @@
       <h1>お探しのページは見つかりません</h1>
       <p>削除された短歌または歌人のページの可能性があります</p>
     </div>
-    <p>ご不明点は<a href="https://twitter.com/utakatanka">Twitter公式アカウント</a>または utakatanka@gmail.com までご連絡ください</p>
+    <p>ご不明点は<a href="https://twitter.com/utakatanka">Twitter公式アカウント</a>または<a href="mailto:utakatanka@gmail.com" target="_blank">utakatanka@gmail.com</a>までご連絡ください</p>
   </div>
 </body>
 </html>
