--- a/public/500.html
+++ b/public/500.html
@@ -23,7 +23,7 @@
     border-right-color: #999;
     border-left-color: #999;
     border-bottom-color: #BBB;
-    border-top: #0095d9 solid 4px;    
+    border-top: #0095d9 solid 4px;
     border-top-left-radius: 9px;
     border-top-right-radius: 9px;
     background-color: white;
@@ -71,7 +71,7 @@
     <div>
       <h1>何らかのシステムエラーが発生しました</h1>
     </div>
-    <p><a href="https://twitter.com/utakatanka">Twitter公式アカウント</a>または utakatanka@gmail.com までご連絡ください。修正対応を行います。</p>
+    <p><a href="https://twitter.com/utakatanka" target="_blank">Twitter公式アカウント</a>または<a href="mailto:utakatanka@gmail.com" target="_blank">utakatanka@gmail.com</a>までご連絡ください。修正対応を行います。</p>
   </div>
 </body>
 </html>
