--- a/public/422.html
+++ b/public/422.html
@@ -8,7 +8,7 @@
     background-color: #EFEFEF;
     color: #2E2F30;
     text-align: center;
-    font-family: arial, sans-serif;
+    font-family: sans-serif;
     margin: 0;
   }
 
@@ -23,7 +23,7 @@
     border-right-color: #999;
     border-left-color: #999;
     border-bottom-color: #BBB;
-    border-top: #0095d9 solid 4px;    
+    border-top: #0095d9 solid 4px;
     border-top-left-radius: 9px;
     border-top-right-radius: 9px;
     background-color: white;
