--- a/public/500.html
+++ b/public/500.html
@@ -71,7 +71,7 @@
     <div>
       <h1>何らかのシステムエラーが発生しました</h1>
     </div>
-    <p><a href="https://twitter.com/utakatanka" target="_blank">Twitter公式アカウント</a>または<a href="mailto:utakatanka@gmail.com" target="_blank">utakatanka@gmail.com</a>までご連絡ください。修正対応を行います。</p>
+    <p><a href="https://x.com/utakatanka" target="_blank">Twitter公式アカウント</a>または<a href="mailto:utakatanka@gmail.com" target="_blank">utakatanka@gmail.com</a>までご連絡ください。修正対応を行います。</p>
   </div>
 </body>
 </html>
